--- a/Iotrenetics/style.css
+++ b/Iotrenetics/style.css
@@ -97,6 +97,10 @@ section {
   margin: auto;
 }
 
+.container span {
+  color: red;
+}
+
 h2 {
   text-align: center;
   margin-bottom: 30px;
@@ -141,3 +145,4 @@ p {
   padding: 20px 10px;
   font-size: 0.9rem;
 }
+
